--- a/app/views/carts/purchase.html.erb
+++ b/app/views/carts/purchase.html.erb
@@ -1,3 +1,5 @@
 <h1>Payment confirmation</h1>
 
-<h2>We have sent the email to you. Thank you for shopping with us </h2>
+<h2>We have sent an email to you. Thank you for shopping with us </h2>
+
+<a href="<%=home_index_url%>" class="btn btn-primary">Continue Shopping</a>
