--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 	                        <a href="#">My account</a>
 	                    </li>
 	                    <li>
-	                        <a href="#">Products</a>
+	                        <a href="<%=products_url%>">Products</a>
 	                    </li>
 	                    <li>
 	                        <a href="#">Contact</a>
