--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
  <!-- Title -->
 <div class="row">
     <div class="col-lg-12">
-        <h3>Products that we offer</h3>
+        <h3>Products we offer:</h3>
     </div>
 </div>
 <!-- /.row -->
