--- a/app/views/customer_notifier/send_signup_email.erb
+++ b/app/views/customer_notifier/send_signup_email.erb
@@ -12,7 +12,7 @@
     <h3> User name: <%=@security.username %> </h3>
     <h3> Password: <%=@security.password %> </h3>
     
-    <p style="font-family: Verdana;font-size:1.2em"> Click <a href="http://www.phoneunlockservice.com/customers/index">here</a></p>
+    <p style="font-family: Verdana;font-size:1.2em"> Click <a href="http://www.phoneunlockservice.com/customers/index">here</a> to signin</p>
     
     <p style="style="font-family: Verdana;font-size:1.2em"> Please contact the phoneunlockservice by email if you need any further assistance. Our emaild id: support@phoneunlockservice.com</p>
     
