--- a/app/views/customers/signin.html.erb
+++ b/app/views/customers/signin.html.erb
@@ -1,4 +1,5 @@
-<%=debug(@security)%>
+@security: <%=debug(@security)%>
 <%=@security.customer.id%>
 <%=@security.customer.FirstName%>
 <%=@security.customer.LastName%>
+@cart: <%=debug(@cart)%>
