--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -57,7 +57,7 @@
     </div>
 </div>
 
-<%= form_tag({:controller => 'products',:action => "create",:method=>"post"},:id=>"products") do %>
+<%= form_tag({:controller => 'carts',:action => "create",:method=>"post"},:id=>"products") do %>
 	<div class="row text-center">
 	    <div class="col-md-12 col-sm-12 hero-feature">
 	        <div class="thumbnail">
