--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,8 @@
                 <h3>Unlock</h3>
                 <p>4,4S,5,5C,5S,6,6+</p>
                 <p>
-                    <a href="<%=products_show_path%>/2" class="btn btn-primary">Buy Now!</a> <a href="/products/2" class="btn btn-default">More Info</a>
+                	<a href="#" class="btn btn-primary">Coming Soon!</a>
+                    <!-- <a href="<%=products_show_path%>/2" class="btn btn-primary">Buy Now!</a> <a href="/products/2" class="btn btn-default">More Info</a> -->
                 </p>
             </div>
         </div>
@@ -66,7 +67,8 @@
                 <h3>Unlock</h3>
                 <p>4,4S,5,5C,5S,6,6+</p>
                 <p>
-                    <a href="<%=products_show_path%>/3" class="btn btn-primary">Buy Now!</a> <a href="/products/4" class="btn btn-default">More Info</a>
+                	<a href="#" class="btn btn-primary">Coming Soon!</a>
+                    <!-- <a href="<%=products_show_path%>/3" class="btn btn-primary">Buy Now!</a> <a href="/products/4" class="btn btn-default">More Info</a> -->
                 </p>
             </div>
         </div>
