--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <div class="jumbotron hero-spacer text-center">
     <h2>Welcome to locksmith to your phone!</h2>
     <p>Unlock your phone and get unlimited benefits</p>
-    <h3>Unlock your Rogers and Bell smartphones for 25$ (Special price this week only!)</h3>
+    <h3>Unlock your Rogers and Fido smartphones for 25$ (Special price this week only!)</h3>
     <p>100% Money-back Gurantee</p>
     <p><a class="btn btn-primary btn-large" href="<%=products_url%>" >Get Started Now!</a>
     </p>
